--- a/index.html
+++ b/index.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taberna do Dragão</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <title>CRUD de Produtos - Lojinha do Salin</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header id="header"> 
-        <img id="logo" src="img/logo.png" alt="">
-        <div>
-            <h1>Taberna do Dragão</h1>
-            <h2>Alimentando o reino desde 2025!</h2>
-        </div>
-        <nav>
-            <a href="#sobre">Sobre</a>
-            <a href="#contato">Contato</a>
-            <a href="#siga">Siga-nos!</a>
-        </nav>
+    <header class="header">
+        <h1>CRUD - Gerenciamento de Produtos</h1>
     </header>
-    <header id="header2">
-        <h3>Rua Zézinho da Silva, 123 - Centro</h3>
-    </header>
-    <main>
-        <div id="legenda">Lanches</div>
-        <section id="produtosContainer"></section>
-        </main>
-        <div class="botao-carrinho-wrapper">
-            <a href="carrinho.html" class="botao-carrinho">Ir para o Carrinho 🛒</a>
-        </div>
-        <section id="final">
-        <h3 id="sobre">Sobre:  Bem-vindo à Taberna do Dragão, o lugar onde lendas e sabores se encontram para criar uma experiência única para o seu paladar. Fundada em 2025, nossa taberna é um refúgio de bons comeres e bebidas, inspirados nos antigos banquetes do reino. Aqui, o fogo da forja nunca se apaga e o aroma dos nossos lanches artesanais e das poções encantadas vai te transportar diretamente para as terras místicas do nosso mundo medieval. <br> <br>
-            
-            Aqui na Taberna do Dragão, a comida não é só para sustentar o corpo, mas também para alimentar a alma. Cada mordida conta uma história, e cada gole traz o sabor das terras distantes que inspiraram nossa taberna. Junte-se a nós, aventureiro! O banquete está servido, e o reino te aguarda!</h3> <br>
-        <h3 id="contato">Contato: (44) 912345-6789</h3> <br>
-        <h3 id="siga">Siga-nos! <a href="https://www.instagram.com/hugo.mazur/">@tabernadragao</a></h3>
-    </section>
-    <script src="js/class.js"></script>
-    <script src="js/script.js"></script>
+
+    <main class="main-content">
+        <section class="form-section">
+            <h2>Adicionar/Editar Produto</h2>
+            <form id="productForm">
+                <input type="hidden" id="productId">
+                <div class="form-group">
+                    <label for="productName">Nome:</label>
+                    <input type="text" id="productName" required>
+                </div>
+                <div class="form-group">
+                    <label for="productQuantity">Quantidade:</label>
+                    <input type="number" id="productQuantity" required min="0">
+                </div>
+                <div class="form-actions">
+                    <button type="submit">Salvar</button>
+                    <button type="button" id="cancelBtn">Cancelar</button>
+                </div>
+            </form>
+        </section>
+        
+        <section class="table-section">
+            <h2>Lista de Produtos</h2>
+            <table id="productsTable">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Quantidade</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <address>
+            <strong>Lojinha do Salin</strong><br>
+            Av das Lojas, 7070<br>
+            Campo Mourão
+        </address>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
